--- a/password-manager/package.json
+++ b/password-manager/package.json
@@ -6,14 +6,20 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "ajv": "^6.12.0",
+    "ajv-keywords": "^3.4.1",
+    "autoprefixer": "^10.4.19",
     "crypto-js": "^4.2.0",
     "firebase": "^10.12.2",
     "firebaseui": "^6.1.0",
+    "postcss": "^8.4.39",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-firebaseui": "^6.0.0",
     "react-router-dom": "^6.24.0",
     "react-scripts": "5.0.1",
+    "schema-utils": "^2.7.1",
+    "tailwindcss": "^3.4.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
